[MSS-1521] PDP ATC button on mobile view fixed issue

--- a/mvmt/cartridges/app_custom_storefront_mvmt/cartridge/client/default/scss/product/detail.scss
+++ b/mvmt/cartridges/app_custom_storefront_mvmt/cartridge/client/default/scss/product/detail.scss
@@ -1277,11 +1277,9 @@
                 border-radius: rem(3);
                 margin-top: rem(4);
                 margin-bottom: rem(4);
-            }
-
-            @include media-breakpoint-down(sm){
                 justify-content: center;
             }
+
         }
 
         .apple-pay-pdp {
